[package]
name = "dash"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/friggeri/dash"
license = "MIT"
authors = ["Adrien Friggeri <adrien@friggeri.net>"]

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
tsify = "0.4.5"

[build-dependencies]
swift-bridge-build = "0.1"

[dependencies]
pest = "2.8.0"
pest_derive = "2.8.0"
swift-bridge = "0.1"

[dev-dependencies]
swift-bridge-cli = "0.1"
wasm-bindgen-test = "0.3.50"
