[package]
name = "dash"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/friggeri/dash"
license = "MIT"
authors = ["Adrien Friggeri <adrien@friggeri.net>"]

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
pest = "2.8.0"
pest_derive = "2.8.0"
uniffi = { version = "0.29.1", features = [ "cli" ], optional = true }
wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
tsify = { version = "0.4.5", optional = true }
thiserror = "2"

[features]
ios = ["dep:uniffi"]
wasm = ["dep:wasm-bindgen", "dep:serde-wasm-bindgen", "dep:tsify"]

[dev-dependencies]
wasm-bindgen-test = "0.3.50"